--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rogue</title>
+    <link rel="icon" type="image/svg+xml" href="./Assets/boss.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,12 +25,17 @@
     <!-- Conteúdo que sobrepõe -->
     <section class="content-section">
         <div class="pergaminho-container">
-            <div class="pergaminho-topo"></div>
+        <!-- <div class="pergaminho-topo"></div>
             <div class="pergaminho-meio">
                 <div class="pergaminho-conteudo">
                     <h2 class="section-title">Meet the chaos</h2>
                     
-                    <div class="pergaminho-lore">
+                    </div>
+                </div>
+            </div>
+            <div class="pergaminho-base"></div> -->    
+
+            <div class="pergaminho-lore">
                         <p class="lore-linha">
                             The laws of creation were corrupted by impious rulers
                         </p>
@@ -48,10 +55,6 @@
                         <p class="lore-pergunta">
                             Do you have the resolve to guide them to their ultimate sacrifice?
                         </p>
-                    </div>
-                </div>
-            </div>
-            <div class="pergaminho-base"></div>
         </div>
     </section>
 
