--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </section>
 
    <!-- Seção de Personagens -->
-<section class="characters-section">
+    <section class="characters-section">
     <div class="blood-overlay"></div>
     <div class="container">
         <h2 class="characters-title">Choose Your Hero</h2>
@@ -265,7 +265,7 @@
             </div>
         </div>
     </div>
-</section>
+    </section>
 
     <!-- Seção de Habitantes do Mundo -->
     <section class="inhabitants-section">
@@ -294,6 +294,29 @@
                 <h3 class="inhabitant-name">Don Diego</h3>
                 <p class="inhabitant-description">
                     Once a distinguished Tarrascosan commander, Don Diego descended into a bloodthirsty beast on the chaotic battlefields of the fallen era. When his conscience suddenly returned during a particularly gruesome battle, he was horrified by the monster he had become. Now disturbed by his gory past, he seeks redemption by teaching the promised heroes the art of warfare.
+                </p>
+            </div>
+
+            <!-- Fildea-->
+            <div class="inhabitant-card">
+                <div class="inhabitant-image">
+                    <img src="./Assets/fildea.png" alt="Fildea">
+                    <div class="inhabitant-frame"></div>
+                </div>
+                <h3 class="inhabitant-name">Fildea</h3>
+                <p class="inhabitant-description">
+                    Former court huntress to the Archducal house of Everyseason, she fled to the wilderness hoping to escape the age of madness. But corruption's reach proved inescapable. Instead of mere survival, she transformed into an apex predator, slaughtering every beast that dared cross her path with ruthless precision. When a mysterious force compelled her to return to the ruins of the civilization she had abandoned, she found new purpose helping the heroes battle the creatures that threaten creation itself.                </p>
+            </div>
+
+            <!-- Giordano Campanella -->
+            <div class="inhabitant-card">
+                <div class="inhabitant-image">
+                    <img src="./Assets/giordano-campanella.png" alt="Giordano Campanella">
+                    <div class="inhabitant-frame"></div>
+                </div>
+                <h3 class="inhabitant-name">Giordano Campanella</h3>
+                <p class="inhabitant-description">
+                    A renowned cleric and scholar from the Grand City of Consigliano who became obsessed with the corruption phenomena when chaos first erupted. The Book of Creation's reality-warping effects proved an irresistible field of study, leading him through ages of forbidden experiments and blasphemous research. Though something fundamental changed within him during those dark years, he now offers guidance in both arcane and divine matters—yet his true intentions remain shrouded in mystery. His severed hands serve as a grim reminder of his vow never again to manipulate creation itself.
                 </p>
             </div>
             
