--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
         <div class="class-selector">
             
             <button class="class-btn" data-class="bs">     
-                <img src="./Assets/bs-icon.svg" alt="bs">
+                <img src="./Assets/mb_off.svg" alt="bs">
             </button>
-
             <button class="class-btn active" data-class="wizard">
                 <img src="./Assets/wizard-icon.svg" alt="Wizard">
             </button>
@@ -182,7 +181,7 @@
                 <img src="./Assets/paladin-icon.svg" alt="Paladin">
             </button>
             <button class="class-btn" data-class="wl">     
-                <img src="./Assets/wl-icon.svg" alt="wl">
+                <img src="./Assets/mb_off.svg" alt="wl">
             </button>
         </div>
         
