--- a/index.html
+++ b/index.html
@@ -357,6 +357,28 @@
                     A renowned cleric and scholar from the Grand City of Consigliano who became obsessed with the corruption phenomena when chaos first erupted. The Book of Creation's reality-warping effects proved an irresistible field of study, leading him through ages of forbidden experiments and blasphemous research. Though something fundamental changed within him during those dark years, he now offers guidance in both arcane and divine matters—yet his true intentions remain shrouded in mystery. His severed hands serve as a grim reminder of his vow never again to manipulate creation itself.
                 </p>
             </div>
+
+            <div class="inhabitant-card">
+                <div class="inhabitant-image">
+                    <img src="./Assets/Gwynplaine.png" alt="Gwynplaine">
+                    <div class="inhabitant-frame"></div>
+                </div>
+                <h3 class="inhabitant-name">Gwynplaine</h3>
+                <p class="inhabitant-description">
+                    Born to nobility in Lorrantic and blessed with musical genius, he served as King Henryk's court musician until the world fell into chaos. Trapped in the king's Eternal Ball—an endless celebration designed to deny reality's horror—years of compelled performance twisted both his body and art. His face now bears a sinister, unchanging smile, while his haunting melodies have grown so melancholic they can rouse spirits from beyond the grave.
+                </p>
+            </div>
+
+            <div class="inhabitant-card">
+                <div class="inhabitant-image">
+                    <img src="./Assets/Badby.png" alt="Badby">
+                    <div class="inhabitant-frame"></div>
+                </div>
+                <h3 class="inhabitant-name">Badby</h3>
+                <p class="inhabitant-description">
+                    Once a simple peasant living on Olimorian lands, she survived the Great Wars' brutality through harsh necessity. Her practical wisdom led her to follow in the wake of armies, scavenging what she could from the aftermath of battle. Through countless years of this grim trade, she developed an almost supernatural eye for identifying treasures amid the wreckage of war.
+                </p>
+            </div>
             
             <!-- Adicione mais habitantes aqui seguindo o mesmo padrão -->
         </div>
