--- a/index.html
+++ b/index.html
@@ -385,6 +385,14 @@
     </div>
     </section>
 
+    <audio id="background-music" loop>
+    <source src="./Assets/Main_Menu.mp3" type="audio/mpeg">
+</audio>
+
+<button class="music-toggle" id="music-btn">
+    🔊
+</button>
+
     <script src="script.js"></script>
 </body>
 </html>
