--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 </audio>
 
 <button class="music-toggle" id="music-btn">
-    🔊
+    <img src="./Assets/sound_on.png" alt="sound" class="music-icon">
 </button>
 
     <script src="script.js"></script>
