--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="background-overlay"></div>
     </div>
 
-    <!-- Seção Hero com efeito parallax -->
+    <!-- Seção Hero com logo, efeito parallax -->
     <section class="hero-section">
         <div class="game-logo">
             <img src="./Assets/Logo_Rogue_Reigns.png" alt="Logo do Jogo" class="logo-image" >
         </div>
     </section>
 
-    <!-- Conteúdo que sobrepõe -->
+    <!-- [IMPORTANTE] Conteúdo que sobrepõe a logo. Pergaminho com titulo e escrita !!IMPORTANTISSIMO!! CSS: .section-title .lore-linha .lore-pergunta -->
     <section class="content-section">
         <div class="pergaminho-container">
         <div class="pergaminho-topo"></div>
@@ -159,7 +159,16 @@
         </div>
     </section>
 
-   <!-- Seção de Personagens -->
+   <!-- [IMPORTANTE] Seção de Personagens, no começo do bloco precisa ter uma onda de sangue CSS: .characters-section::before .characters-section::after
+
+   O Fim desse bloco é o começo do proximo bloco CSS: .inhabitants-section::before
+
+   O "botão" dos status tipo magic power e etc, não é pra ser igual ta no site e sim igual ta aqui. CSS: .stat
+   
+   Os emojis foram substituidos por SVG CSS: .stat-icon-svg
+
+   Eu retirei o efeito de sangue de fundo, é só um background vermelho escuro CSS: .characters-section background-color: #1a0000;
+   -->
     <section class="characters-section">
     <div class="container">
         <h2 class="characters-title">Choose Your Hero</h2>
@@ -304,7 +313,12 @@
     </div>
     </section>
 
-    <!-- Seção de Habitantes do Mundo -->
+    <!-- [IMPORTANTE] Seção de Habitantes do Mundo, agora tem o background que o Rafa desenhou CSS: .inhabitants-background
+
+    Arrumar a imagem dos personagens para focar no rosto deles. CSS: .inhabitant-1 .inhabitant-2 e etc
+    
+    Atenção no texto dos personagens!!!
+    -->
     <section class="inhabitants-section">
     <div class="inhabitants-background"></div>
     <div class="container">
@@ -358,6 +372,7 @@
                 </p>
             </div>
 
+             <!-- Gwynplaine -->
             <div class="inhabitant-card inhabitant-5">
                 <div class="inhabitant-image">
                     <img src="./Assets/Gwynplaine.png" alt="Gwynplaine">
@@ -369,6 +384,7 @@
                 </p>
             </div>
 
+            <!-- Badby -->
             <div class="inhabitant-card inhabitant-6">
                 <div class="inhabitant-image">
                     <img src="./Assets/Badby.png" alt="Badby">
