--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </section>
 
-    <!-- [IMPORTANTE] Conteúdo que sobrepõe a logo. Pergaminho com titulo e escrita !!IMPORTANTISSIMO!! CSS: .section-title .lore-linha .lore-pergunta -->
+    <!-- [IMPORTANTE] Conteúdo que sobrepõe a logo. Pergaminho com titulo e escrita !!IMPORTANTISSIMO pra não cortar as palavras !! CSS: .section-title .lore-linha .lore-pergunta -->
     <section class="content-section">
         <div class="pergaminho-container">
         <div class="pergaminho-topo"></div>
